--- a/_quarto.yml
+++ b/_quarto.yml
@@ -33,7 +33,7 @@ website:
           - text: "Guide"
             icon: "map"
             href: docs/rest_planning/rp_index.qmd
-          - text: "Decision Treel Tool"
+          - text: "Decision Tree Tool"
             icon: "calculator"
             href: docs/rest_planning/rp_calculator.qmd
       - file: "https://padlet.com/ypeatpartnership/internal-peatland-restoration-practitioners-course-zwdir9yl5ns0qa22"
